--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -6,7 +6,7 @@
         {% block meta_viewport %}
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         {% endblock %}
-        <title>{% block title %}{% if page_title is defined %} {{ page_title }} &raquo; {% endif %}Website{% endblock %}</title>
+        <title>{% block title %}{% if page_title is defined %} {{ page_title }} &raquo; {% endif %}{{ core.name}}{% endblock %}</title>
         <meta name="description" content="My porfolio" />
 	<meta name="keywords" content="dario sebatian asurain, sebastian sasturain, sasturain, personal web, porfolio" />
 	<meta name="author" content="Dario Sebastian Sasturain" />
