--- a/src/FrontBundle/Resources/views/Front/index.html.twig
+++ b/src/FrontBundle/Resources/views/Front/index.html.twig
@@ -184,13 +184,13 @@
     <section id="pricing" class="section">
         <div class="container">
             <div class="row title text-center">
-                <h2 class="margin-top white">Pricing</h2>
+                <h2 class="margin-top white">Precios</h2>
                 <h4 class="light white">Selecciona tu producto y/o plan favorito y registrate ahora!</h4>
             </div>
             <div class="row no-margin">
                 <div class="col-md-7 no-padding col-md-offset-5 pricings text-center">
                     <div class="pricing">
-                        <div class="box-main active" data-img="/bundles/front/img/pricing1.jpg">
+                        <div class="box-main active" data-img="/bundles/front/img/pricing22.jpg">
                             <h4 class="white">Comercio virtual</h4>
                             <h4 class="white regular light">300 € <span class="small-font">/ año</span></h4>
                             <a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Registrate ahora</a>
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="pricing">
-                        <div class="box-main" data-img="/bundles/front/img/pricing2.jpg">
+                        <div class="box-main" data-img="/bundles/front/img/pricing22.jpg">
                             <h4 class="white">Blog y presencia en internet</h4>
                             <h4 class="white regular light">100 € <span class="small-font">/ año</span></h4>
                             <a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Registrate ahora</a>
@@ -255,13 +255,13 @@
         <div class="modal-dialog">
             <div class="modal-content modal-popup">
                 <a href="#" class="close-link"><i class="icon_close_alt2"></i></a>
-                <h3 class="white">Sign Up</h3>
+                <h3 class="white">Registrate</h3>
                 <form action="" class="popup-form">
                     <input type="text" class="form-control form-white" placeholder="Full Name">
                     <input type="text" class="form-control form-white" placeholder="Email Address">
                     <div class="dropdown">
                         <button id="dLabel" class="form-control form-white dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Pricing Plan
+                            Precios de Planes
                         </button>
                         <ul class="dropdown-menu animated fadeIn" role="menu" aria-labelledby="dLabel">
                             <li class="animated lightSpeedIn"><a href="#">1 month membership ($150)</a></li>
@@ -273,10 +273,10 @@
                     <div class="checkbox-holder text-left">
                         <div class="checkbox">
                             <input type="checkbox" value="None" id="squaredOne" name="check" />
-                            <label for="squaredOne"><span>I Agree to the <strong>Terms &amp; Conditions</strong></span></label>
+                            <label for="squaredOne"><span>Estoy de acuerdo <strong>Terms &amp; Conditions</strong></span></label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-submit">Submit</button>
+                    <button type="submit" class="btn btn-submit">Enviar</button>
                 </form>
             </div>
         </div>
