--- a/src/FrontBundle/Resources/views/Front/index.html.twig
+++ b/src/FrontBundle/Resources/views/Front/index.html.twig
@@ -132,11 +132,12 @@
                     <div class="row">
                         <div class="col-md-2"></div>
                         <div class="col-md-8">
-                            <p>Me considero una persona pro-activa, siendo este mi punto fuerte y débil a la vez, soy sincero y amo el trabajo en grupo, creo en construir amistades que perduren atravez del tiempo.</p>
-                            <p>Naci en Salta en las montañas de los Andes Argentina, vivo en Europa hace mas de 5 años, Madrid, Marbella, Barcelona, Berlin algunas de las ciudades en las que viví. Aficionado a las montañas de nacimiento y a la naturaleza por elección y también músico de corazón. </p>
-                            <p>He tenido numerosas profesiones en mi vida pero la de programador es la que en este momento me acompaña y ya hace mas de 10 años.</p>
-                            <p>Trato de aplicar las mejores prácticas siempre, tanto en la programacíon, gestión, formación como en la vida, amplios conocimientos en symfony2, php, linux, git, bootstrap, jaquery, css3, less y muchas tecnologías más.</p>
-                            <p>Me apasiona la investigación y seguir el contante ruedo de las neuvas tecnología, la flexibilidad en el trabajo me caracteriza con experiencia en manejo de grupos y me considero alguien en quien puedes confiar tu proyecto y obtener el mejor resultado.</p>
+                            <p>Me considero una persona pro-activa, siendo este mi punto fuerte y débil a la vez, soy sincero y amo el trabajo en grupo, creo en construir amistades que perduren a través del tiempo.</p>
+                            <p>Nací en Salta en las montañas de los Andes Argentina, vivo en Europa hace más de 5 años, Madrid, Barcelona, Marbella, Berlín y ahora Cádiz algunas de las ciudades en las que viví. "Aficionado a las montañas de nacimiento y a la naturaleza por elección y también músico de corazón." </p>
+                            <p>He tenido numerosas profesiones en mi vida pero la de programador es la que en este momento me acompaña y ya hace más de 10 años en conjunto con otras actividades como la de permacultura o el cuidado de animales (actualmente cumpliendo horas de voluntariado en el "Refugio de animales de granja <a href="http://elcortijillodelalola.org/" target="_blank"><img src="/bundles/front/img/cortijillo_de_la_lola.png" style="height: 32px;" alt="Cortijillo de la Lola" title="Cortijillo de la Lola"></a>")</p>
+                            <p>Trato de aplicar las mejores prácticas siempre, tanto en la programación, gestión, formación como en la vida, amplios conocimientos en symfony2, php, linux, git, bootstrap, jquery, css3, less y muchas tecnologías más.</p>
+                            <p>Me apasiona la investigación y seguir el constante ruedo de las nuevas tecnología, la flexibilidad en el trabajo me caracteriza con experiencia en manejo de grupos y me considero alguien en quien puedes confiar tu proyecto y obtener el mejor resultado.</p>
+                            <p><a href="https://www.infojobs.net/candidate/cv/view/index.xhtml" target="_blank">Ver mi Curriculum Vitae en <img src="/bundles/front/img/infojobs.png" style="height: 22px;"></a>  -  Descargar mi CV en <a href="/uploads/documents/cv_espana.pdf" target="_blank">español</a> / <a href="/uploads/documents/cv_ingles.pdf" target="_blank">inglés</a></p>
                         </div>
                         <div class="col-md-2"></div>
                     </div>
