--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -24,3 +24,57 @@
         color: #fff;
     }
 }
+#home{
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Roboto', 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
+        position: relative;
+        margin: 10px 0;
+    }
+
+    h1 {
+        font-size: 60px;
+    }
+
+    h2 {
+        font-size: 48px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+
+    h4 {
+        font-size: 24px;
+    }
+
+    h5 {
+        font-size: 18px;
+    }
+
+    h6 {
+        font-size: 16px;
+    }
+}
+h5 {
+    font-size: 18px;
+}
+
+h6 {
+    font-size: 16px;
+}
+.owl-pagination{
+        line-height: 23px!important;
+}
+.main-nav li a:hover{
+    background-color: transparent!important;
+}
+.btn-primary{
+    color: #fff;
+    border-color: #fff;
+    background: transparent;
+}
+.btn-primary:hover {
+    color: #00a8ff;
+    background: #fff;
+    border-color: #fff;
+}
