--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -1,51 +1,42 @@
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        {% block meta_viewport %}
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        {% endblock %}
-        <title>{% block title %}{% if page_title is defined %} {{ page_title }} &raquo; {% endif %}{{ core.name}}{% endblock %}</title>
-        <meta name="description" content="My porfolio" />
-	<meta name="keywords" content="dario sebatian asurain, sebastian sasturain, sasturain, personal web, porfolio" />
-	<meta name="author" content="Dario Sebastian Sasturain" />
-        
-        <!-- Favicons (created with http://realfavicongenerator.net/)-->
-        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
-	<link rel="apple-touch-icon" sizes="57x57" href="/bundles/front/img/favicons/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/bundles/front/img/favicons/apple-touch-icon-60x60.png">
-	<link rel="icon" type="image/png" href="/bundles/front/img/favicons/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/bundles/front/img/favicons/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="img/favicons/manifest.json">
-	<link rel="shortcut icon" href="/bundles/front/img/favicons/favicon.ico">
-	<meta name="msapplication-TileColor" content="#00a8ff">
-	<meta name="msapplication-config" content="/bundles/front/img/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
-        
-        {% block stylesheets %}
+{% extends 'CoreBundle:Base:base.layout.html.twig' %}
 
-            {% stylesheets
-                'bundles/front/css/normalize.css'
-                'bundles/front/css/bootstrap.css'
-                'bundles/front/css/owl.css'
-                'bundles/front/css/animate.css'
-                'bundles/front/fonts/font-awesome-4.1.0/css/font-awesome.min.css'
-                'bundles/front/fonts/eleganticons/et-icons.css'
-                'bundles/front/css/cardio.css'
-                'bundles/front/less/custom.less'
-            %}
-                <link rel="stylesheet" href="{{ asset_url }}">
-            {% endstylesheets %}
+{% block stylesheets %}
+    
+    <!-- Favicons (created with http://realfavicongenerator.net/)-->
+    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
+    <link rel="apple-touch-icon" sizes="57x57" href="/bundles/front/img/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/bundles/front/img/favicons/apple-touch-icon-60x60.png">
+    <link rel="icon" type="image/png" href="/bundles/front/img/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/bundles/front/img/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="img/favicons/manifest.json">
+    <link rel="shortcut icon" href="/bundles/front/img/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#00a8ff">
+    <meta name="msapplication-config" content="/bundles/front/img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
-        {% endblock %}
+    {% stylesheets
+        'bundles/front/css/normalize.css'
+        'bundles/front/css/bootstrap.css'
+        'bundles/front/css/owl.css'
+        'bundles/front/css/animate.css'
+        'bundles/front/fonts/font-awesome-4.1.0/css/font-awesome.min.css'
+        'bundles/front/fonts/eleganticons/et-icons.css'
+        'bundles/front/css/cardio.css'
+    %}
+        <link rel="stylesheet" href="{{ asset_url }}">
+    {% endstylesheets %}
 
-         
-        
-        {% block head %}{% endblock %}
-    </head>
+    {{ parent() }}
+    
+    {% stylesheets
+        'bundles/front/less/custom.less'
+    %}
+        <link rel="stylesheet" href="{{ asset_url }}">
+    {% endstylesheets %}
+    
+{% endblock %}
 
-    {% block body %}
+{% block body %}
     <body class="core-body {% block body_class %}{% endblock %}">
         
         {% block header %}
@@ -132,7 +123,6 @@
         {% block javascripts %}
             
             {% javascripts
-                'bundles/front/js/jquery-1.11.1.min.js'
                 'bundles/front/js/owl.carousel.min.js'
                 'bundles/front/js/bootstrap.min.js'
                 'bundles/front/js/wow.min.js'
@@ -145,5 +135,4 @@
            
         {% endblock %}
     </body>
-    {% endblock %}
-</html>
+{% endblock %}
