--- a/src/FrontBundle/Resources/views/Base/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Base/menu.html.twig
@@ -26,7 +26,7 @@
                 </li>
             {% endif %}
         {% endfor %}
-        <li><a href="/blog">{{ 'blog.singular' | trans  }}</a></li>
+        <li><a href="#_blog">{{ 'blog.singular' | trans  }}</a></li>
         {% if app.user %}
             <li ><a class="icon fa-user" href="#">{{ app.user.name }}</a>
                 <ul class="" style="-webkit-user-select: none; display: none; position: absolute;">
