--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -2,6 +2,19 @@
     Created on : 04-oct-2016, 16:40:41
     Author     : sebastian
 */
+.pricing{
+    h2{
+        color: #fff;
+    }
+    .light p{
+        color: #fff;
+    }
+}
+.navbar-nav > li > a {
+    padding: 15px 25px;
+    font-size: 16px;
+    color: white;
+}
 .btn-core{
     background: #00a8ff;
     border: 2px solid transparent;
@@ -16,14 +29,24 @@
     cursor: pointer;
     -webkit-user-select: none;
 }
-.pricing{
-    h2{
-        color: #fff;
-    }
-    .light p{
-        color: #fff;
-    }
+.owl-pagination{
+    line-height: 23px!important;
 }
+.btn-primary{
+    color: #fff;
+    border-color: #fff;
+    background: transparent;
+}
+.btn-primary:hover {
+    color: #00a8ff;
+    background: #fff;
+    border-color: #fff;
+}
+.intro-table-hover .expand {
+    margin-top: 70px;
+}
+/*
+
 #home{
     h1, h2, h3, h4, h5, h6 {
         font-family: 'Roboto', 'Avenir Next', 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
@@ -63,7 +86,7 @@ h6 {
     font-size: 16px;
 }
 .owl-pagination{
-        line-height: 23px!important;
+    line-height: 23px!important;
 }
 .main-nav li a:hover{
     background-color: transparent!important;
@@ -78,3 +101,4 @@ h6 {
     background: #fff;
     border-color: #fff;
 }
+*/
