Add trans to nav button

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -45,6 +45,9 @@
 .intro-table-hover .expand {
     margin-top: 70px;
 }
+.main-nav li a:hover{
+    background-color: transparent!important;
+}
 /*
 
 #home{
