Add trans to nav button bis

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -45,7 +45,7 @@
 .intro-table-hover .expand {
     margin-top: 70px;
 }
-.main-nav li a:hover{
+.main-nav li a:hover,.main-nav li a:focus{
     background-color: transparent!important;
 }
 /*
