Fix language select styles

--- a/src/FrontBundle/Resources/public/less/custom.less
+++ b/src/FrontBundle/Resources/public/less/custom.less
@@ -48,6 +48,33 @@
 .main-nav li a:hover,.main-nav li a:focus{
     background-color: transparent!important;
 }
+
+/*********************/
+/******Language*******/
+/*********************/
+.container-language{
+    .btn-default{
+        border: none;
+    }
+    #select-language > button{
+        background-color: transparent;
+        border-color:transparent;
+        border: none;
+    }
+    .btn-default:hover, .dropdown-toggle.btn-default:hover,.open > .dropdown-toggle.btn-default {
+        background-color: transparent;
+        border-color:transparent;
+        border: none;
+    }
+    .btn-default > span{
+        color: white;
+    }
+}
+.navbar-fixed-top{
+    .btn-default > span{
+        color: #bbb;
+    }
+}
 /*
 
 #home{
