--- a/src/FrontBundle/Resources/views/Base/layout.html.twig
+++ b/src/FrontBundle/Resources/views/Base/layout.html.twig
@@ -30,6 +30,7 @@
         'bundles/front/fonts/eleganticons/et-icons.css'
         'bundles/front/css/cardio.css'
         'bundles/front/less/custom.less'
+        'bundles/admin/plugins/flagstrap/dist/css/flags.css'
     %}
         <link rel="stylesheet" href="{{ asset_url }}">
     {% endstylesheets %}
@@ -127,6 +128,7 @@
                 'bundles/front/js/typewriter.js'
                 'bundles/front/js/jquery.onepagenav.js'
                 'bundles/front/js/main.js'
+                'bundles/admin/plugins/flagstrap/dist/js/jquery.flagstrap.min.js'
             %}
             <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
