--- a/src/FrontBundle/Resources/views/Base/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Base/menu.html.twig
@@ -10,6 +10,7 @@
 </div>
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <li class="container-language" style="float: right">{{ get_languages() }}</li>
     <ul class="nav navbar-nav navbar-right main-nav">
         <li><a href="#home">{{ 'home' | trans  }}</a></li>
         {% set items = get_menu_items(true) %}
@@ -39,5 +40,6 @@
         {% endif %}
         
     </ul>
+        
 </div>
 <!-- /.navbar-collapse -->
